# M1-S2-Image-Processing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TP1/: CMakeLists.txt
TP1/src/: tp1_exo2.cpp  tp1_exo3.cpp  tp1_exo4.cpp
TP2/: CMakeLists.txt
TP2/src/: tp2_exo1.cpp  tp2_exo2.cpp  tp2_exo3.cpp
TP3/src/: tp3_exo2.cpp  tp3_exo3.cpp
TP4/: CMakeLists.txt
TP4/src/: tp4_exo1.cpp
TP5/: CMakeLists.txt
TP5/src/: fourierTransform.cpp  tp05_ex01.cpp  tp05_ex02.cpp  tp05_ex03.cpp
